Make header position fixed

--- a/CSS/kasper.css
+++ b/CSS/kasper.css
@@ -103,6 +103,8 @@ header {
     left: 0;
     width: 100%;
     z-index: 2;
+    position: fixed;
+    background-color: var(--transparent-color);
 }
 
 header .container {
